# routes/index.js
@@ -5,10 +5,8 @@ const router = require('express').Router();
 router.use('/', require('./swagger'));
 router.use('/books', require('./books'));
 router.use('/authors', require('./authors'));
-// Implement next week 
-// router.use('/members', require('./members'));
-// Implement next week 
-// router.use('/borrowing', require('./borrowing'));
+router.use('/members', require('./members'));
+router.use('/borrowing', require('./borrowing'));
 
 router.get('/login', passport.authenticate('github', (req, res) => { }));
 router.get('/logout', function (req, res, next) {
